cell tags complete, images correct, notes displayed correctly

--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -26,14 +26,11 @@
     "\n",
     "This information can be found in a steel profile table or through the Steel Profiles app by Building with Steel. Often, the table provides the mass per linear meter [kg/m]. This needs to be converted to weight per linear meter [kN/m]. To do this, we multiply the displayed number by 10 (rounding from 9.8: acceleration due to gravity in $m/s^2$) to convert from [kg] to [N], and then divide by 1000 (from N to kN). [N.B.: Integrated beams (joists) are often used with channel plates to reduce the construction height.]\n",
     "\n",
-    "```{note}\n",
+    "````{note}\n",
     "The beam has a length of 6 meters. According to the estimation rule, the estimated beam height is then:  \n",
     "$1/20 × 6000 = 300 \\ [mm]$  \n",
     "Based on this, we choose a HE320A profile. We note down the data of this profile. The weight (mass) per linear meter is given in kg. This needs to be converted to kN:  \n",
     "$99.5 \\ [kg/m]$ → $0.01 × 99.5 ≈ 0.10 \\ [kN/m]$.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
     "\n",
     "The image below is a screenshot of the Steel Profiles app. This app is free to install on your phone and provides an overview of available steel profiles and their properties.\n",
     "\n",
@@ -42,6 +39,9 @@
     "width: 400px\n",
     "---\n",
     "```\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
+    "````\n",
     "\n",
     "For concrete and wooden beams, the weight per linear meter is not always provided. To determine that, we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the acceleration due to gravity $[m/s²]$. For concrete, the density is $2400 \\ [kg/m³]$, for reinforced concrete $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the strength class). The weight per linear meter becomes:\n",
     "$g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (here $b$ and $h$ in meters!)\n",
@@ -50,7 +50,7 @@
     "$I = \\frac{1}{12} × b × h³ \\ [mm⁴]$  \n",
     "$W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]$\n",
     "\n",
-    "```{note}\n",
+    "````{note}\n",
     "For the concrete structure, we use an in-situ cast, non-prestressed concrete beam. We choose strength class C30/37. According to the estimation rule, the height h would be equal to $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (estimation rule): $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then:  \n",
     "0.3 [m] × 0.6 [m] × 2500 [kg/m³] × 10 [m/s²] / 1000 = 4.5 [kN/m]\n",
     "\n",
@@ -66,7 +66,7 @@
     "\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
-    "```"
+    "````"
    ]
   },
   {
@@ -162,6 +162,13 @@
     "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
     "+++\n",
     "{bdg-primary}`Steel`\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "For the imposed load on the concrete beam, also the following applies:\n",
+    "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```"
    ]
   },
@@ -179,6 +186,9 @@
     "where $l$ is the length of the beam and $q$ is the total line load. Be consistent with the units!\n",
     "\n",
     "```{figure} Images/Maximum_Moment_Beam.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "Maximum moment for beam on two supports and equally distributed load.\n",
     "```\n",
     "\n",
@@ -277,8 +287,6 @@
     "This is summarised in the figure below.\n",
     "\n",
     "```{figure} Images/Deflection.jpg\n",
-    "---\n",
-    "---\n",
     "Instantaneous and infinite deflection in final state.\n",
     "```\n",
     "\n",
