--- a/book/calculation_examples/concrete/cantilever_beam.ipynb
+++ b/book/calculation_examples/concrete/cantilever_beam.ipynb
@@ -123,6 +123,8 @@
     "---\n",
     "width: 400px\n",
     "---\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "The resting load consists of the weight of the channel plates, the finishing layer, and the ceiling with pipes. The required channel plate has a thickness of 200 mm and a weight of $3.1 [kN/m^2]$. The 50 mm thick topping layer weighs $1.2 [kN/m^2]$, and for the ceiling and pipes, $0.6 [kN/m^2]$ is considered. Together, this gives a resting load of:\n",
@@ -166,7 +168,7 @@
     "| Partial factor $\\gamma_G$ for $G_{field}$ | 1.2 | $\\gamma_G$ for $G_{cant}$ | 0.9 |\n",
     "| Partial factor $\\gamma_Q$ for $Q_{field}$ | 1.5 | $\\gamma_Q$ for $Q_{cant}$ | 0 |\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "The field moment due to the extreme load:\n",
     "\n",
     "$M_{veld;d}=\\frac{1}{8}\\cdot(\\gamma_G\\cdot q_G+\\gamma_Q \\cdot q_Q) \\cdot l_{ov}^2  = \\frac{1}{8} \\cdot(1.2 \\cdot40.2 [kN/m]+1.5 \\cdot24 [kN/m])\\cdot(6 [m])^2=379.1 [kNm]$\n",
@@ -186,12 +188,14 @@
     "\n",
     "With strength class S235, the Utilization Coefficient (U.C.):\n",
     "\n",
-    "$U.C. \\Rightarrow  \\dfrac{\\sigma_{m,d}}{f_{m,d}}   =  \\dfrac{231.8 [N/mm^2]}{235 [N/mm^2]}  =0.99 \\leq 1.0 \\Rightarrow$ \\textcolor{green}{Satisfied}\n",
+    "$U.C. \\Rightarrow  \\dfrac{\\sigma_{m,d}}{f_{m,d}}   =  \\dfrac{231.8 [N/mm^2]}{235 [N/mm^2]}  =0.99 \\leq 1.0 \\Rightarrow \\textcolor{green}{\\text{Satisfied}}$\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "During the calculation of the maximum additional deflection of beam section A-B, the variable load should be placed on this beam section. Deformation is not a safety check, so the partial factors can be omitted, i.e., equal to 1 (and 0 for favorable variable loads).\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "Since steel does not experience creep, the additional deflection depends only on the variable load present.\n",
     "\n",
     "The deflection at the midpoint of A-B due to the load on A-B is:\n",
@@ -204,7 +208,9 @@
     "\n",
     "This gives:\n",
     "\n",
-    "$U.C. \\Rightarrow \\dfrac{w_{bij, veld}}{w_{bij, norm}}  = \\dfrac{8.4 [mm]}{12 [mm]} = 0.7 < 1.0 \\Rightarrow$ \\textcolor{green}{Satisfied}\n",
+    "$U.C. \\Rightarrow \\dfrac{w_{bij, veld}}{w_{bij, norm}}  = \\dfrac{8.4 [mm]}{12 [mm]} = 0.7 < 1.0 \\Rightarrow \\textcolor{green}{\\text{Satisfied}}$\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "```{figure} Images/Cantilever_Beam_Loads_Deformationline.jpg\n",
@@ -242,6 +248,8 @@
     "For S235, the Utilization Coefficient (U.C.):\n",
     "\n",
     "$U.C. \\Rightarrow  \\dfrac{\\sigma_{m,d}}{f_{m,d}}   =  \\dfrac{113.9  [N/mm^2]}{235 [N/mm^2] }  =0.48≤ 1 \\Rightarrow  $ \\textcolor{green}{Satisfied}\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "In this load combination, the deflection at the end of the cantilever needs to be determined. The maximum additional deflection at D occurs with only a variable load on the cantilever and not on beam section A-B.\n",
@@ -254,7 +262,7 @@
     "---\n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "From the formula sheet, we use the formula for the deflection of a 'clamped' beam [B3] to determine the deflection of the cantilever:\n",
     "\n",
     "$w_{uit 1}=\\frac{1}{8} \\cdot \\dfrac{q_Q\\cdot l_{uit}^4}{EI_y}= \\frac{1}{8} \\cdot \\dfrac{24 [N/mm] \\cdot (2000 [mm])^4}{210000 [N/mm^2] \\cdot 229,3 \\cdot 10^6 [mm^4]}   =1,0 [mm]$\n",
@@ -281,7 +289,9 @@
     "\n",
     "With this, we can perform a U.C.:\n",
     "\n",
-    "$U.C. \\rightarrow \\dfrac{w_{bij, uit}}{w_{bij, norm, uit}}   = \\dfrac{5 [mm]}{8 [mm]}  =0,6 \\leq 1,0 \\ \\Rightarrow \\textcolor{green}{Satisfied}$\n",
+    "$U.C. \\rightarrow \\dfrac{w_{bij, uit}}{w_{bij, norm, uit}}   = \\dfrac{5 [mm]}{8 [mm]}  =0,6 \\leq 1,0 \\ \\Rightarrow \\textcolor{green}{\\text{Satisfied}}$\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "**Evaluation of Verification Calculations:**\n",
