--- a/book/calculation_examples/concrete/column.ipynb
+++ b/book/calculation_examples/concrete/column.ipynb
@@ -20,12 +20,16 @@
     "```{figure} Images/Load_Column.jpg\n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "The imposed load on the beam and the superimposed load have already been determined in the beam's verification calculation. We found $3$ for the imposed floor load and $4.9 [kN/m^2]$ for the superimposed load on the beam. We will use the beams identified in the verification calculation. For the steel structure, this was an HE300A, strength class S355, with a weight of $0.88 [kN/m]$.\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "For the concrete structure, this was a beam of 300 mm by 600 mm, made of concrete with a strength class C35/45 and a weight of $4.5 [kN/m]$.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```\n",
     "\n",
     "For simplicity, we assume that the permanent load of the roof is equal to that of the floors. The roof beams are the same as those in the floor. Depending on the roof covering, the difference will not be significant. According to the Eurocode, for a roof not used as a terrace, an imposed load of $1 [kN/m^2]$ should be taken for every $10 [m^2]$ of roof area. For the entire roof, a lower imposed load can be considered. However, we choose an imposed load of $1 [kN/m^2]$. This also provides the option for installing solar panels (PV panels) or adding a light sedum planting. It is advisable to consistently record the data found for clarity. The table below summarises the loads.\n",
@@ -49,6 +53,8 @@
     "width: 400px\n",
     "---\n",
     "```\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "````\n",
     "\n",
     "```{note}\n",
@@ -63,6 +69,8 @@
     "| 360                  | 360x360   | 3.24   | 129600  | $1399.7 \\cdot 10^6$ | C30/37   | 20       | $27.5 \\cdot 10^3$ |\n",
     "\n",
     "For the modulus of elasticity, we must use the design value $\\mathsf{E_{c,d}}$ according to the standard.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```"
    ]
   },
@@ -117,26 +125,29 @@
     "\n",
     "If the strength is not satisfied, then we can multiply the found $A$ by the value of the Unity Check to obtain the required cross-section: \n",
     "\n",
-    "$A_needed = U.C. \\cdot A_{old}$\n",
+    "$A_{needed} = U.C. \\cdot A_{old}$\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "For the steel column, the total load on the column according to the weight table is 1705 [kN]. The stress in the column is:\n",
     "\n",
     "$\\sigma_{c;d}  = \\dfrac{F_{c;d}}{A} = \\dfrac{1704.7 \\cdot 10^3 [N]}{7680 [mm^2]}= 222 [N/mm^2]$\n",
     "\n",
     "The Unity Check for the HE240A profile can be determined:\n",
     "\n",
-    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{222 [N/mm^2]}{235 [N/mm^2]}=0.94 < 1.0 \\Rightarrow \\text{\\textcolor{green}{Meets Requirement}}$\n",
+    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{222 [N/mm^2]}{235 [N/mm^2]}=0.94 < 1.0 \\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
+    "\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "From the weight table, it appears that the concrete column on the ground floor (under the first floor) must support 1854.5 kN. The stress in the column is:\n",
     "\n",
     "$\\sigma_{c;d}=\\dfrac{F_{c;d}}{A}=\\dfrac{1854.7 \\cdot 10^3 [N]}{360 [mm] \\cdot 360 [mm]}=14.3 [N/mm^2]$\n",
     "\n",
     "The Unity Check for the $360 \\times 360 [mm^2]$ concrete column is:\n",
     "\n",
-    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{14.3 [N/mm^2]}{20 [N/mm^2]}=0.72 < 1.0$ $\\Rightarrow$ Meets Requirement\n",
+    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{14.3 [N/mm^2]}{20 [N/mm^2]}=0.72 < 1.0$ $\\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
     "\n",
     "The chosen dimensions of the column meet the requirement, but the unity check is so low that we can choose a more optimal size to save material. The minimum required dimensions of the column can be determined by calculating the required cross-sectional area:\n",
     "\n",
@@ -150,7 +161,9 @@
     "\n",
     "$\\sigma_{c;d}=\\dfrac{F_{c;d}}{A}=\\dfrac{1854.5 \\cdot 10^3 [N]}{300 [mm] \\cdot 300 [mm]} = 20.6\\ [N/mm^2] < 23.3 [N/mm^2]$\n",
     "\n",
-    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{20.6 [N/mm^2]}{23.3 [N/mm^2]}=0.88 < 1$ $\\Rightarrow$ Meets Requirement\n",
+    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{20.6 [N/mm^2]}{23.3 [N/mm^2]}=0.88 < 1$ $\\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```"
    ]
   },
@@ -175,30 +188,32 @@
     "```{figure} Images/Buckling_Column.jpg\n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "For a column of a HE240A profile, we have:\n",
     "\n",
     "$F_{cr} = \\dfrac{pi^2 \\cdot E \\cdot I_z}{l^2_{cr}}=\\dfrac{\\pi^2 \\cdot 210000 [N/mm^2] \\cdot 27.69 \\cdot 10^6 [mm^4]}{(3600 [mm])^2}= 4428.3 \\cdot 10^3 [N] $\n",
     "\n",
     "$n = \\dfrac{F_{cr}}{F_{c;d}}= \\dfrac{4428.3 \\cdot 10^3 [N]}{1705 \\cdot 10^3 [N]} = 2.6 < 5 $\n",
     "\n",
-    "$U.C. \\Rightarrow \\dfrac{5 \\cdot F_{c;d}}{F_{cr}}=\\dfrac{5 \\cdot 1705 \\cdot 10^3 [N]}{4428.3 \\cdot 10^3 [N]}= 1.92 > 1 \\Rightarrow$ \\textcolor{red}{Does not meet requirements.}\n",
+    "$U.C. \\Rightarrow \\dfrac{5 \\cdot F_{c;d}}{F_{cr}}=\\dfrac{5 \\cdot 1705 \\cdot 10^3 [N]}{4428.3 \\cdot 10^3 [N]}= 1.92 > 1 \\Rightarrow \\textcolor{red}{\\text{Does not meet requirement}}$\n",
     "\n",
     "The buckling number is too small, indicating insufficient safety. A larger profile is needed:\n",
     "\n",
     "$I_{z,necessary} = U.C. \\cdot I_{z,old} = 1.92 \\cdot 27.69 \\cdot 10^6 [mm^4] = 52.6 \\cdot 10 [mm^4]$.\n",
     "\n",
     "In the steel profile app, a profile with at least this quadratic surface moment can be found. This could be, for example, a HE300A, which provides sufficient buckling safety. A higher strength class is not meaningful here.\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "For the concrete column of $\\mathsf{360 \\cdot 360 [mm^2]}$, we have:\n",
     "\n",
     "$F_{cr} = \\dfrac{\\pi^2 \\cdot E \\cdot I_z}{l^2_{cr}}=\\dfrac{\\pi^2 \\cdot 27500 [N/mm^2] \\cdot 1400 \\cdot 10^6 [mm^4]}{(3600 [mm])^2}= 29313 \\cdot 10^3 [N]$\n",
     "\n",
     "$n = \\dfrac{F_{cr}}{F_{c;d}}= \\dfrac{29313 \\cdot 10^3 [N]}{1861.1 \\cdot 10^3 [N]} = 15.7 \\geq 5$\n",
     "\n",
-    "$U.C. \\Rightarrow \\dfrac{5 \\cdot F_{c;d}}{F_{cr}}=\\dfrac{5 \\cdot 1861.1 \\cdot 10^3 [N]}{29313 \\cdot 10^3 [N]}= 0.32 < 1 \\Rightarrow$ \\textcolor{green}{Meets requirements.}\n",
+    "$U.C. \\Rightarrow \\dfrac{5 \\cdot F_{c;d}}{F_{cr}}=\\dfrac{5 \\cdot 1861.1 \\cdot 10^3 [N]}{29313 \\cdot 10^3 [N]}= 0.32 < 1 \\Rightarrow \\textcolor{green}{\\text{Meets requirement}}$\n",
     "\n",
     "The buckling number indicates that the column provides ample safety against buckling. Since the U.C. is so low, we could again consider if material savings are possible. We can determine the minimum required quadratic surface moment of the column using the U.C.:\n",
     "\n",
@@ -209,6 +224,8 @@
     "$I_z=\\frac{1}{12} \\cdot 300 [mm] \\cdot (300 [mm])^3=675 \\cdot 10^6 [mm^4]$\n",
     "\n",
     "and will therefore also be more than sufficient. Concrete columns often provide sufficient buckling safety due to their relatively large surface area.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "``` "
    ]
   },
