--- a/book/calculation_examples/concrete/truss_beam.ipynb
+++ b/book/calculation_examples/concrete/truss_beam.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "The required profiles can then be calculated using the formula $A_{ben} = \\dfrac{F_{staaf;d}}{f_{t;d}}$.\n",
     "\n",
-    "$f_{t;d}$ is the design value of the tensile strength. This is essentially equal to the design value of the compressive strength: $\\bm{\\mathsf{f_{c;d}}}$. However, for members subjected to compression, buckling must also be considered. Additionally, if the top chord carries roof or floor plates, it must also be checked for bending. The total stress is then the sum of $\\sigma_{c;d}$ and $\\sigma_{m;d}$, which must be less than $f_{c;d}$.\n",
+    "$f_{t;d}$ is the design value of the tensile strength. This is essentially equal to the design value of the compressive strength: $f_{c;d}$. However, for members subjected to compression, buckling must also be considered. Additionally, if the top chord carries roof or floor plates, it must also be checked for bending. The total stress is then the sum of $\\sigma_{c;d}$ and $\\sigma_{m;d}$, which must be less than $f_{c;d}$.\n",
     "\n",
     "For bending of the top chord, it applies that $\\sigma_{t;d}+\\sigma_{m;d} \\leq f_{t;d}$. For the stresses in these verification calculations, we naturally use the absolute values.\n",
     "\n",
@@ -87,8 +87,8 @@
     "```{figure} Images/Truss_Load_Bearing.jpg\n",
     "```\n",
     "\n",
-    "```{Note} Steel\n",
-    "The steel plate concrete floor has a total weight of $3.6\\ kN/m^2$. The finishing layer, pipes, and ceiling together weigh $\\bm{\\mathsf{1.8\\ kN/m^2}}$. This makes the total floor weight $5.4 [kN/m^2]$.\n",
+    "```{Note}\n",
+    "The steel plate concrete floor has a total weight of $3.6\\ kN/m^2$. The finishing layer, pipes, and ceiling together weigh $1.8 \\ kN/m^2$. This makes the total floor weight $5.4 [kN/m^2]$.\n",
     "\n",
     "From the schematic load-bearing plan, it is apparent that an area of $6 \\cdot 5 [m^2]$ is supported on each side of the truss joint. So, the total area at a joint is:\n",
     "\n",
@@ -110,17 +110,20 @@
     "\n",
     "$340 [kN] + 34 [kN] = 374 [kN]$.\n",
     "\n",
-    "For an office function, according to the National Annex to the Eurocode, the imposed load is $\\bm{\\mathsf{2.5\\ kN/m^2}}$. With lightweight partition walls (usually estimated at $\\bm{\\mathsf{0.5\\ kN/m^2}}$), this becomes a load of $\\bm{\\mathsf{3\\ kN/m^2}}$. As a point load on the truss, this load needs to be multiplied by the yellow area in Figure \\ref{fig:afb44}:\n",
+    "For an office function, according to the National Annex to the Eurocode, the imposed load is $2.5 \\ kN/m^2$. With lightweight partition walls (usually estimated at $0.5 \\ kN/m^2$), this becomes a load of $3 \\ kN/m^2$. As a point load on the truss, this load needs to be multiplied by the yellow area in Figure \\ref{fig:afb44}:\n",
     "\n",
-    "$\\bm{\\mathsf{6\\ m \\cdot (5\\ m + 5\\ m) \\cdot 3\\ kN/m = 180\\ kN}}$\n",
+    "$\\mathsf{6\\ m \\cdot (5\\ m + 5\\ m) \\cdot 3\\ kN/m = 180\\ kN}$\n",
     "\n",
     "The design value for the ULS (ultimate limit state) becomes:\n",
     "\n",
-    "$\\bm{\\mathsf{F_d = 1.2 \\cdot 374\\ kN + 1.5 \\cdot 180\\ kN = 718\\ kN}}$.\n",
+    "$\\mathsf{F_d = 1.2 \\cdot 374\\ kN + 1.5 \\cdot 180\\ kN = 718\\ kN}$.\n",
     "\n",
-    "This force $\\bm{\\mathsf{F_d}}$ acts as a point load on the truss, both on the top and bottom chords. The reaction due to these joint loads for two floors then becomes:\n",
+    "This force $\\mathsf{F_d}$ acts as a point load on the truss, both on the top and bottom chords. The reaction due to these joint loads for two floors then becomes:\n",
     "\n",
-    "$\\bm{\\mathsf{2 \\cdot (\\frac{1}{2}F_d + F_d + F_d + \\frac{1}{2} F_d) = 6 F_d \\cdot R_A = 6 \\cdot 718\\ kN = 4309\\ kN}}$.\n"
+    "$\\mathsf{2 \\cdot (\\frac{1}{2}F_d + F_d + F_d + \\frac{1}{2} F_d) = 6 F_d \\cdot R_A = 6 \\cdot 718\\ kN = 4309\\ kN}$.\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
+    "```\n"
    ]
   }
  ],
