Several fixes on lay-out

--- a/book/design_workflow/general_loads/deformation_limits.ipynb
+++ b/book/design_workflow/general_loads/deformation_limits.ipynb
@@ -24,6 +24,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Deflections $w_i$.\n",
     "```"
    ]
   },
@@ -61,6 +62,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "$w_{max}$ versus $phi_{remaining}$\n",
     "```\n",
     "\n",
     "```{figure} Images/Water_Accumulation2.jpg\n",
@@ -96,6 +98,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Low rise deformation.\n",
     "```\n",
     "\n",
     "### High rise\n",
@@ -107,6 +110,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "High rise deformation.\n",
     "```"
    ]
   },
