--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -48,7 +48,11 @@
     "out. As Eurocode is very extensive, the method for determining wind load\n",
     "will be pointed out using a simple structure. For more complicated\n",
     "shapes, use NEN-EN 1991-1-4. The directions of the different wind loads\n",
-    "first need to be determined:\n",
+    "first need to be determined.\n",
+    "\n",
+    "```{note}\n",
+    "Both these pressures need to be combined in the most unfavourable way.\n",
+    "```\n",
     "\n",
     "The force coefficients corresponding to the different wind zones depend on the\n",
     "geometry of the building. For certain values the force coefficients are given.\n",
@@ -58,7 +62,6 @@
     "```{figure} Images/Positive_External_Pressure.png\n",
     "---\n",
     "scale: 100%\n",
-    "align: right\n",
     "---\n",
     "Positive external pressure\n",
     "```\n",
@@ -66,13 +69,8 @@
     "```{figure} Images/Positive_Internal_Pressure.png\n",
     "---\n",
     "scale: 100%\n",
-    "align: right\n",
     "---\n",
     "Positive internal pressure\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "Both these pressures need to be combined in the most unfavourable way.\n",
     "```"
    ]
   },
@@ -92,17 +90,13 @@
     "$b$ = dimension in crosswind direction  \n",
     "$e$ = $b$ or $2h$, whichever is smaller  \n",
     "\n",
-    "```{Note}\n",
-    "For both wind directions a different set of parameters applies.\n",
-    "```\n",
-    "\n",
     "```{figure} Images/Windbox.png\n",
     "---\n",
     "scale: 100%\n",
-    "align: right\n",
     "---\n",
     "Building parameters\n",
-    "```"
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -132,15 +126,15 @@
     "```{figure} Images/Windzones1.png\n",
     "---\n",
     "scale: 100%\n",
-    "align: right\n",
     "---\n",
+    "Windzones for façades. Left: fpr all e & d. Right: e < d. \n",
     "```\n",
     "\n",
     "```{figure} Images/Windzones2.png\n",
     "---\n",
     "scale: 100%\n",
-    "align: right\n",
     "---\n",
+    "Windzones for façades. Left: e > d. Right: e > 5d.  \n",
     "```"
    ]
   },
@@ -155,16 +149,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "| Type        | F     | G     | H     | I        |\n",
+    "|-------------|-------|-------|-------|----------|\n",
+    "| Sharp eaves | -1.8  | -1.2  | -0.7  | +0.2/-0.2|\n",
+    "\n",
     "```{figure} Images/Windzones_Roofs1.png\n",
     "---\n",
     "scale: 100%\n",
-    "align: right\n",
     "---\n",
-    "```\n",
-    "  \n",
-    "| Type        | F     | G     | H     | I        |\n",
-    "|-------------|-------|-------|-------|----------|\n",
-    "| Sharp eaves | -1.8  | -1.2  | -0.7  | +0.2/-0.2|\n"
+    "Flat roofs, both wind directions.\n",
+    "```"
    ]
   },
   {
@@ -182,12 +176,14 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Duopitch roofs, ridge crosswind ($\\theta = 0$).\n",
     "```\n",
     "  \n",
     "```{figure} Images/Windzones_Roofs3.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Duopitch roofs, ridge parallel to ($\\theta = 90$)\n",
     "```\n",
     "  \n",
     "| Roof Angle (α) |    F    |    G    |    H    |    I    |    J    |\n",
@@ -239,6 +235,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Wind zones on canopies side view.\n",
     "```\n",
     "\n",
     "Locally the wind pressure or suction on the canopy can of course be\n",
@@ -250,6 +247,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Wind zones on canopies top view.\n",
     "```\n",
     "\n",
     "Both the local and resultant force coefficient depents on the blockage\n",
@@ -261,6 +259,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Wind zones on canopies for different blockages under the canopy.\n",
     "```\n",
     "\n",
     "| Roof Angle (α) | Blockage Factor (φ) | Overall Force cf |    A    |    B    |    C    |\n",
@@ -343,6 +342,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Windregions in the Netherlands.\n",
     "```"
    ]
   },
