--- a/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
@@ -59,7 +59,7 @@
     "| Category G: traffic area (heavy)     |                     |                   |                  |\n",
     "| G - floors                           | 5                   | 40                | e                |\n",
     "| Category H: roofs                    |                     |                   |                  |\n",
-    "| dependend of roof angle              |                     |                   | a:               |\n",
+    "| dependend of roof angle              |                     |                   | a               |\n",
     "| - 0 ≤ a ≤ 15                         | 1                   | 1.5               | b,c,f            |\n",
     "| - 15 ≤ a ≤ 20                        | 4 - 0.2a            | 1.5               | b,c,f            |\n",
     "| - 20 ≤ a                             | 0                   | 1.5               | b,c,f            |\n"
