--- a/book/design_workflow/general_drawing/technical_drawings.ipynb
+++ b/book/design_workflow/general_drawing/technical_drawings.ipynb
@@ -20,6 +20,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Varying paper size.\n",
     "```\n",
     "\n",
     "## Header\n",
@@ -29,6 +30,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "How to draw the header for technical drawings.\n",
     "```\n",
     "\n",
     "## Layout\n",
@@ -39,6 +41,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "How to draw the lay-out for technical drawings.\n",
     "```\n",
     "\n",
     "## Scale\n",
@@ -50,6 +53,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "How to draw the scale for technical drawings.\n",
     "```\n",
     "\n",
     "## Contours\n",
@@ -60,6 +64,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "How to draw the contours for technical drawings.\n",
     "```\n",
     "\n",
     "## Objects\n",
@@ -69,6 +74,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Technical drawing of an object.\n",
     "```\n",
     "\n",
     "## Dimensions\n",
@@ -85,12 +91,14 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Dimensioning in technical drawing, height levels.\n",
     "```\n",
     "\n",
     "```{figure} Images/General_Drawing8.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Dimensioning in technical drawing, details. \n",
     "```\n",
     "\n",
     "## Hatching\n",
@@ -102,6 +110,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Hatching in technical drawings.\n",
     "```\n",
     "\n",
     "## Lines\n",
@@ -112,6 +121,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Different type of lines in technical drawings.\n",
     "```\n",
     "\n",
     "## Text\n",
@@ -122,6 +132,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Text in technical drawings.\n",
     "```"
    ]
   }
