--- a/book/design_workflow/general_loads/deformation_limits.ipynb
+++ b/book/design_workflow/general_loads/deformation_limits.ipynb
@@ -62,7 +62,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
-    "$w_{max}$ versus $phi_{remaining}$\n",
+    "$w_{max}$ versus $phi_{remaining}$.\n",
     "```\n",
     "\n",
     "```{figure} Images/Water_Accumulation2.jpg\n",
