--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -34,8 +34,8 @@
     "$A_{ref}$ = Reference area on structure or structural component [$m^2$]  \n",
     "\n",
     "```{note}\n",
-    "1. The structural factor cscd can be taken as 1 for regular, low-rise buildings, for more information see NEN-EN 1991-1-4  \n",
-    "2. For high buildings (h>b) the velocity pressure may be assumed to decline towards ground level, for details see NEN-EN 1991-1-4\n",
+    "1. The structural factor cscd can be taken as 1 for regular, low-rise buildings, for more information see NEN-EN 1991-1-4.  \n",
+    "2. For high buildings (h>b) the velocity pressure may be assumed to decline towards ground level, for details see NEN-EN 1991-1-4.\n",
     "```"
    ]
   },
@@ -63,14 +63,14 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
-    "Positive external pressure\n",
+    "Positive external pressure.\n",
     "```\n",
     "\n",
     "```{figure} Images/Positive_Internal_Pressure.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
-    "Positive internal pressure\n",
+    "Positive internal pressure.\n",
     "```"
    ]
   },
@@ -94,7 +94,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
-    "Building parameters\n",
+    "Building parameters.\n",
     "```\n",
     "\n"
    ]
@@ -183,7 +183,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
-    "Duopitch roofs, ridge parallel to ($\\theta = 90$)\n",
+    "Duopitch roofs, ridge parallel to ($\\theta = 90$).\n",
     "```\n",
     "  \n",
     "| Roof Angle (α) |    F    |    G    |    H    |    I    |    J    |\n",
