--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -18,6 +18,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Beams on multiple supports for concentrated loads.\n",
     "```\n",
     "\n",
     "| Type | M(1)  | M2     | M(2)   | M3     | M(3)   | R1     | R2     | R3     | R4     |\n",
@@ -43,13 +44,13 @@
     "`````{admonition} Example\n",
     ":class: tip\n",
     "For situation c:\n",
-    "- F = 30 kN\n",
-    "- L = 8 m\n",
+    "- $F = 30 kN$\n",
+    "- $L = 8 m$\n",
     "\n",
     "The calculations are as follows:\n",
-    "- M(1) = 0.175 x 30 x 8 kNm\n",
-    "- M3 = -0.15 x 30 x 8 kNm\n",
-    "- R2 = 1.15 x 30 kN\n",
+    "- $M(1) = 0.175 * 30 * 8 kNm$\n",
+    "- $M3 = -0.15 * 30 * 8 kNm$\n",
+    "- $R2 = 1.15 * 30 kN$\n",
     "`````"
    ]
   },
@@ -68,6 +69,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Beams on multiple supports for distributed loads.\n",
     "```\n",
     "\n",
     "| Type | M(1) | location rel. to 1* | M2     | M(2) | location rel. to 2** | M3     | M(3) | R1     | R2     | R3     | R4     |\n",
