--- a/book/design_workflow/general_mechanics/forget_me_nots.ipynb
+++ b/book/design_workflow/general_mechanics/forget_me_nots.ipynb
@@ -14,17 +14,22 @@
     "```{figure} Images/Forgetmenots1.jpg\n",
     "---\n",
     "scale: 100%\n",
-    "---\n",
+    "--- \n",
+    "Forget-me-not for cantilevering beams.\n",
     "```\n",
+    "\n",
     "```{figure} Images/Forgetmenots2.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Forget-me-not for simply supported beams.\n",
     "```\n",
+    "\n",
     "```{figure} Images/Forgetmenots3.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Forget-me-not for multiple different acting loads.\n",
     "```"
    ]
   }
