--- a/book/design_workflow/general_loads/loads_limit_states.ipynb
+++ b/book/design_workflow/general_loads/loads_limit_states.ipynb
@@ -94,7 +94,7 @@
     "| CC3               | High consequence for loss of human life, or economic, social or environmental consequences very great | Grandstands, public buildings where consequences of failure are high (e.g. a concert hall) | 1.1 |\n",
     "\n",
     "```{note}\n",
-    "To take the concequence class into account, the applicable load factors ($γ_G$ & $γ_{Q;1}$) have to be multiplied by $K_{FI}$\n",
+    "To take the concequence class into account, the applicable load factors ($γ_G$ & $γ_{Q;1}$) have to be multiplied by $K_{FI}$.\n",
     "```"
    ]
   },
@@ -120,8 +120,6 @@
     "| Category F: Traffic Area, Vehicle Weight ≤ 30 kN | -                                           | 0.7 | 0.7 | 0.6 |\n",
     "| Category G: Traffic Area, 30 kN ≤ Vehicle Weight ≤ 160 kN | -                                     | 0.7 | 0.5 | 0.3 |\n",
     "| Category H: Roofs                | -                                                           | 0   | 0   | 0   |\n",
-    "\n",
-    "&nbsp;\n",
     "  \n",
     "| Other Actions (Environmental Actions) | Example                                        | Ψ0  | Ψ1  | Ψ2  |\n",
     "|----------------------------------------|------------------------------------------------|-----|-----|-----|\n",
@@ -129,8 +127,6 @@
     "| Wind Loads on Buildings                | -                                              | 0   | 0.2 | 0   |\n",
     "| Temperature on Buildings (non-fire)   | -                                              | 0   | 0.5 | 0   |\n",
     "\n",
-    "&nbsp;\n",
-    "  \n",
     "$Ψ_0$ = factor for combination value of a variable action  \n",
     "$Ψ_1$ = factor for frequent value of a variable action (for example used in combination with accidental loading)  \n",
     "$Ψ_2$ = factor for quasi-permanent value of a variable action (for example used in creep calculations)  \n"
